chore: Review edits for PR 368 - Removed extra component wrappers - Added cssURL - Removed styling in drawerWelcome.css that wasn't used