@@ -6,9 +6,7 @@ import com.webforj.component.button.Button;
 import com.webforj.component.button.ButtonTheme;
 import com.webforj.component.drawer.Drawer;
 import com.webforj.component.field.TextField;
-import com.webforj.component.html.elements.Div;
 import com.webforj.component.layout.flexlayout.FlexDirection;
-import com.webforj.component.layout.flexlayout.FlexJustifyContent;
 import com.webforj.component.layout.flexlayout.FlexLayout;
 import com.webforj.component.optioninput.CheckBox;
 import com.webforj.router.annotation.FrameTitle;
@@ -31,23 +29,21 @@ public class DrawerView extends Composite<FlexLayout> {
     drawer.setLabel("Task Manager");
     drawer.open();
 
-    tasks.setDirection(FlexDirection.COLUMN).setSpacing("var(--dwc-space-s)");
+    tasks.setDirection(FlexDirection.COLUMN)
+    .setSpacing("var(--dwc-space-s)")
+    .setStyle("overflow-y", "auto")
+    .setMaxHeight("60vh");
 
     addTask("Finish project documentation");
     addTask("Call John about the meeting");
     addTask("Prepare slides for tomorrow");
 
-    Div taskContainer = new Div();
-    taskContainer.setStyle("overflow-y", "auto")
-      .setStyle("max-height", "60vh")
-      .add(tasks);
-    
     TextField newTaskField = new TextField("New Task", "");
 
     Button addTaskButton = new Button("Add Task", ButtonTheme.PRIMARY);
     addTaskButton.onClick(e -> {
       String taskText = newTaskField.getValue();
-      if (taskText != null && !taskText.trim().isEmpty()) {
+      if (!taskText.isBlank()) {
         addTask(taskText);
         newTaskField.setValue("");
       }
@@ -61,13 +57,8 @@ public class DrawerView extends Composite<FlexLayout> {
       .setSpacing("var(--dwc-space-s)");
     footerContainer.add(newTaskField, addTaskButton, clearTasksButton);
 
-    FlexLayout drawerContent = new FlexLayout();
-    drawerContent.setDirection(FlexDirection.COLUMN)
-      .setJustifyContent(FlexJustifyContent.BETWEEN)
-      .setHeight("100%")
-      .add(taskContainer, footerContainer);
-
-    drawer.add(drawerContent);
+    drawer.add(tasks);
+    drawer.addToFooter(footerContainer);
 
     Button openDrawerButton = new Button("Open Task Manager");
     openDrawerButton.onClick(e -> drawer.open());
